added session, added todo, copypasted html list of wishes

--- a/src/main/resources/templates/wish_view.html
+++ b/src/main/resources/templates/wish_view.html
@@ -6,5 +6,15 @@
 </head>
 <body>
 
+<section>
+    <table>
+        <tr th:each="wishList : ${wishList}">
+            <td th:text="${wishList.description}"></td>
+            <td th:text="${wishList.price}"></td>
+            <td th:text="${wishList.isReserved}"></td>
+        </tr>
+    </table>
+</section>
+
 </body>
 </html>
