--- a/src/main/resources/templates/makeWish.html
+++ b/src/main/resources/templates/makeWish.html
@@ -23,9 +23,11 @@
         <tr th:each="wishList : ${wishList}">
             <td th:text="${wishList.description}"></td>
             <td th:text="${wishList.price}"></td>
-            <td th:text="${wishList.isReserved}"></td>
         </tr>
     </table>
+</section>
+<section>
+    <button><a href=wish_view.html>Share your Wishlist</a></button>
 </section>
 
 </body>
