Sharing of wishlist, reserved only visible to others, changed name of html file

--- a/src/main/resources/templates/makeWish.html
+++ b/src/main/resources/templates/makeWish.html
@@ -27,7 +27,9 @@
     </table>
 </section>
 <section>
-    <button><a href=wish_view.html>Share your Wishlist</a></button>
+    <form action="/wishlist" method="get">
+    <button type="submit" name="userID" th:value="${userID}">Share wishlist</button>
+    </form>
 </section>
 
 </body>
