added delete wish for user

--- a/src/main/resources/templates/makeWish.html
+++ b/src/main/resources/templates/makeWish.html
@@ -23,6 +23,9 @@
         <tr th:each="wishList : ${wishList}">
             <td th:text="${wishList.description}"></td>
             <td th:text="${wishList.price}"></td>
+            <td><form action="/deleteWish" method="post">
+                <button type="submit" name="wishID" th:value="${wishList.wishID}">del</button>
+            </form></td>
         </tr>
     </table>
 </section>
