--- a/src/main/resources/templates/wishList.html
+++ b/src/main/resources/templates/wishList.html
@@ -11,7 +11,19 @@
         <tr th:each="wishList : ${wishList}">
             <td th:text="${wishList.description}"></td>
             <td th:text="${wishList.price}"></td>
-            <td th:if="${userID != sessionUserID}" th:text="${wishList.isReserved}"></td>
+            <!-- <td th:if="${userID != sessionUserID}" th:text="${wishList.isReserved}"></td> -->
+            <!--Reserve knap, hvis man er logget ind med en anden bruger
+                remove reservation, hvis man har reserveret et ønske
+                ingen knapper, hvis man ikke er logget ind
+
+                //todo not done-->
+            <td th:if="${userID != sessionUserID and sessionUserID > 0 and wishList.isReserved == 'false'}"><form action="/reserveWish" method="post">
+                <button type="submit" name="wishID" th:value="${wishList.wishID}">reserve</button>
+            </form></td>
+            <!--  -->
+            <td th:if="${sessionUserID == wishList.reservedUserID and wishList.isReserved == 'true'}"><form action="/removeReservation" method="post">
+                <button type="submit" name="wishID" th:value="${wishList.wishID}">remove</button>
+            </form></td>
         </tr>
     </table>
 </section>
