--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <link rel="stylesheet" th:href="@{/styles/LoginStylesheet.css}" type="text/css">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h1>Wish Cloud</h1>
-<section id="login">
-    <form action="/login" method="post">
-        <label for="username">Choose username:</label>
-        <input type="text" name="username" id="username" required placeholder="Username">
-        <button type="submit">Submit</button>
-    </form>
-</section>
+<div class="bg-img">
+    <h1>WELCOME TO WISHLIST</h1>
+    <div class="content">
+        <header>ENTER USERNAME</header>
+        <form action="/login" method="post">
+            <div class="field">
+                <span class="logoForUser"></span>
+                <input type="text" name="username" id="username" required placeholder="Username">
+            </div>
+            <div class="field">
+                <input type="submit" value="LOGIN">
+            </div>
+        </form>
+    </div>
+</div>
 </body>
 </html>
