--- a/src/main/resources/static/styles/Stylesheet.css
+++ b/src/main/resources/static/styles/Stylesheet.css
@@ -52,11 +52,12 @@ h1 {
     transform: translate(-50%, -80%);
 }
 
-.list {
+section.list {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-size: 50px;
 }
 
 .ShareBtn:hover {
